--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,6 +11,7 @@
 @import './components.css';
 @import './responsive-utils.css';
 @import './section-layout.css';
+@import './marketing-styles.css';
 
 /* Enhanced global styles */
 html {
