--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,6 +8,7 @@
 @import './animations.css';
 @import './base.css';
 @import './utilities.css';
+@import './blog.css';
 @import './components.css';
 @import './responsive-utils.css';
 @import './section-layout.css';
