--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -1,4 +1,4 @@
-/* Blog Post Styles - Updated for 2025 */
+/* Blog Post Styles */
 .blog-content {
   font-feature-settings: "kern" 1, "liga" 1, "calt" 1;
   text-rendering: optimizeLegibility;
@@ -8,26 +8,6 @@
   line-height: 1.7;
   color: #374151;
   max-width: none;
-}
-
-/* Override any prose or Tailwind heading styles */
-.prose h1,
-.prose h2,
-.prose h3,
-.prose h4,
-.blog-content h1,
-.blog-content h2,
-.blog-content h3,
-.blog-content h4,
-article h1,
-article h2,
-article h3,
-article h4,
-div[class*="prose"] h1,
-div[class*="prose"] h2,
-div[class*="prose"] h3,
-div[class*="prose"] h4 {
-  color: inherit !important;
 }
 
 /* Enhanced Typography */
